--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,16 @@
 repos:
   - repo: https://github.com/hadialqattan/pycln
-    rev: v0.0.4 # Possible releases: https://github.com/hadialqattan/pycln/releases
+    rev: v2.4.0  # Possible versions: https://github.com/hadialqattan/pycln/releases
     hooks:
       - id: pycln
   - repo: 'https://github.com/psf/black'
-    rev: 21.6b0
+    rev: 24.4.2  # Possible versions: https://github.com/psf/black/releases
     hooks:
       - id: black
         args:
         - "--line-length=120"
   - repo: 'https://github.com/pre-commit/pre-commit-hooks'
-    rev: v4.0.1
+    rev: v4.6.0  # Possible versions: https://github.com/pre-commit/pre-commit-hooks/releases
     hooks:
       - id: end-of-file-fixer
         exclude: '^docs/[^/]*\.svg$'
@@ -35,7 +35,7 @@ repos:
           - '--allow-missing-credentials'
       - id: detect-private-key
   - repo: 'https://github.com/PyCQA/flake8'
-    rev: 4.0.1
+    rev: 7.1.0  # Possible versions: https://github.com/PyCQA/flake8/tags
     hooks:
       - id: flake8
         args:
